--- a/contacto/index.html
+++ b/contacto/index.html
@@ -250,7 +250,7 @@ var bocJSParams = {"boc_is_mobile_device":"","boc_theme_url":"\/wp-content\/them
 div#banner_distribuidores {
     display: none;
 }</style>
-		<style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1564690717155{margin-bottom: 0px !important;}.vc_custom_1564844022132{margin-bottom: 0px !important;padding-top: 30px !important;padding-bottom: 20px !important;}.vc_custom_1564841515440{margin-bottom: 0px !important;padding-top: 50px !important;padding-bottom: 45px !important;}.vc_custom_1744648627497{margin-bottom: 0px !important;}.vc_custom_1564844091965{margin-bottom: 0px !important;padding-bottom: 0px !important;}.vc_custom_1744648671666{margin-bottom: 0px !important;}.vc_custom_1744648694257{margin-bottom: 0px !important;}.vc_custom_1744648715546{margin-bottom: 0px !important;}.vc_custom_1647965065609{margin-bottom: 0px !important;}.vc_custom_1744648818897{margin-bottom: 0px !important;}.vc_custom_1744648740601{margin-bottom: 0px !important;}.vc_custom_1744648760664{margin-bottom: 0px !important;}</style>
+		<style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1564690717155{margin-bottom: 0px !important;}.vc_custom_1564844022132{margin-bottom: 0px !important;padding-top: 30px !important;padding-bottom: 20px !important;}.vc_custom_1564841515440{margin-bottom: 0px !important;padding-top: 50px !important;padding-bottom: 45px !important;}.vc_custom_1744648627497{margin-bottom: 0px !important;}.vc_custom_1564844091965{margin-bottom: 0px !important;padding-bottom: 0px !important;}.vc_custom_1744648671666{margin-bottom: 0px !important;}.vc_custom_1744648694257{margin-bottom: 0px !important;}.vc_custom_1744648715546{margin-bottom: 0px !important;}.vc_custom_1647965065609{margin-bottom: 0px !important;}.vc_custom_1744648818897{margin-bottom: 0px !important;}.vc_custom_1744648740601{margin-bottom: 0px !important;}.vc_custom_1744660502914{margin-bottom: 0px !important;}</style>
 <noscript><style>.wpb_animate_when_almost_visible { opacity: 1; }</style></noscript>	
 	
 </head>
@@ -665,9 +665,9 @@ Cel. +57 (5) 300 837 5755</p>
 <div class="boc_spacing " style="height: 20px"></div>
 </div></div></div>
 <div class="wpb_column vc_column_container vc_col-sm-3"><div class="vc_column-inner"><div class="wpb_wrapper">
-	<div class="wpb_text_column wpb_content_element vc_custom_1744648760664">
+	<div class="wpb_text_column wpb_content_element vc_custom_1744660502914">
 		<div class="wpb_wrapper">
-			<p><b>MAGDALENA<br>
+			<p><strong>MAGDALENA</strong><b><br>
 </b>Rita Fernandez<br>
 rfernandez@rossdelen.com<br>
 Cel. +57 (5) 310 706 5310</p>
